# stk

./: CMakeLists.txt  README  README.md
data/cmake/: FindSTK.cmake
data/cmake/disabled/: STKCairo.cmake
data/cmake/enabled/: STKCairo.cmake
doc/: naming-convention.txt  spec.pts.txt  spec2.pts.txt
modules/: FindCairo.cmake  FindFFTW.cmake
sphere-code/: CMakeLists.txt  README.txt
sphere-code/core/: constants.h  create-folders.cpp  mymacros.h  utils-samples.h  utils-sphere.h  utils.h
sphere-code/data/: pointset-sphere-healpix-regular-n3072.txt
sphere-code/demos/: powspec-projectivespace-hemisphere-to-sphere-demo1-1.cxx  powspec-projectivespace-hemisphere-to-sphere-demo1.cxx  powspec-projectivespace-hemisphere-to-sphere-demo2.cxx  powspec-sphere-demo1-1.cxx  powspec-sphere-demo1-2.cxx  powspec-sphere-demo1.cxx  powspec-sphere-demo2-1.cxx  powspec-sphere-demo2-2.cxx  powspec-sphere-demo2.cxx  sampler-ccvt-sphere-demo1-1.cxx  sampler-ccvt-sphere-demo1.cxx  sampler-ccvt-sphere-demo2.cxx  sampler-ccvt-sphere-demo3.cxx  samples-demo1-1.cxx  samples-demo1.cxx  samples-demo2.cxx  spherical-functions-demo1.cxx  variance-analysis-demo1-1.cxx  variance-analysis-demo1-3.cxx  variance-analysis-demo1.cxx  variance-analysis-demo2-1.cxx  variance-analysis-demo2.cxx  variance-analysis-demo3.cxx  variance-analysis-demo4.cxx  variance-sphericalcap-from-powspec-demo1.cxx  variance-sphericalcap-from-powspec-demo2.cxx
sphere-code/domaintransform/: domaintransform.h  square2disk.cpp  square2sphere.cpp
sphere-code/extras/: sphere-regular-sampler.cpp  sphere-stratified-sampler.cpp
sphere-code/io/: read-pointset.cpp  read-pointset.h
sphere-code/quaternions/: quaternion.cpp  quaternion.h
sphere-code/sampler-sphere/: ccvt-sphere-fast.cpp  ccvt-sphere.cpp  ccvt-sphere.h  random-shift-on-sphere.cpp  rotate-spherical-samples.cpp  sampler-hemisphere-poissondisk.cpp  sampler-sphere-poisson-disk.cpp  sampler-sphere.cpp  sampler-sphere.h  sphere-regular-sampler.cpp  sphere-stratified-sampler.cpp  sphere-subdivision.cpp  sphere-subdivision.h
sphere-code/sampler-sphere/stk/: point.hpp  pointset.hpp  vector.hpp
sphere-code/scripts/: variance-analysis-ccvt.sh
sphere-code/sphere-analysis/: power-spectrum-harmonics.cpp  power-spectrum-sphericalcap.cpp  profiles-variance-bounds.cpp  sphere-analysis.h  spherical-functions.cpp  spherical-functions.h
src/: discrepancy.cpp  draw-pts.cpp  fourier.cpp  integration-test.cpp  pts-info.cpp  sampler-haltonT2.cpp  sampler-sobolT2.cpp  sampler-stratifiedT2.cpp  sampler-whitenoiseT2.cpp  zoneplate.cpp
src/sampler/: sampler.cpp
src/sampler-fpo/: DT.cpp  sampler-fpoT2.cpp  util.h
src/sampler-poissondisk/: counter.h  create-folders.cpp  cube.h  generator.h  sampler-poissondisk-demo1.cxx  sampler-poissondiskT2-oirg.cpp  utils.h
src/sampler/ccvt/: ccvt.cpp  ccvt_metric.h  ccvt_optimizer.h  ccvt_point.h  ccvt_site.h
src/sampler/fpo/: DT.h  fpo.cpp
src/sampler/grid/: grid.cpp
src/sampler/halton/: halton.cpp
src/sampler/lhc/: lhc.cpp
src/sampler/poisson-disk/: bignum.h  generator.h  interval.h  poisson-disk.cpp  sample.h  tree.h  tuple.h
src/sampler/sobol/: sobol.cpp
src/sampler/stratified/: stratified.cpp
src/sampler/whitenoise/: whitenoise.cpp
src/stk/: array.hpp  color.cpp  color.hpp  constant.hpp  debug.cpp  debug.hpp  delaunay.cpp  delaunay.hpp  domain.hpp  exception.cpp  exception.hpp  histogram.hpp  hungarian-algorithm-raw.hpp  hungarian-algorithm.hpp  point.hpp  pointset.hpp  stk.hpp  type.hpp  vector.hpp  voronoi.cpp  voronoi.hpp
src/stk/conversion/: anisotropy.hpp  discretise.hpp  histogram.hpp  pointset.hpp  radial-mean.hpp
src/stk/cuda/: tools.hpp
src/stk/fourier/: cu-transform.cu  cu-transform.hpp  domain.hpp  normalize.hpp  power-spectrum.hpp  transform-cft.hpp  transform-commons.hpp  transform-cuda.hpp  transform-fft.cpp  transform-fft.hpp  transform.hpp
src/stk/function/: base.hpp  generic.hpp  spectrum.hpp  window.hpp
src/stk/io/: array.cpp  array.hpp  chart.cpp  chart.hpp  commons.hpp  delaunay.cpp  delaunay.hpp  histogram.hpp  pointset.cpp  pointset.hpp  voronoi.cpp  voronoi.hpp
src/stk/optimization/: gradient-descent.hpp  lloyd.hpp  optimizer.hpp
src/stk/sampler/: grid.hpp  stratified.hpp  white-noise.hpp
test/: sampler-analysis.sh
test/results/: stratifiedT2-n4096-10.mpts  whitenoiseT2-n4096-10.mpts
